cdap-kubernetes/src/main/resources/task-worker-gateway.yaml
# Copyright © 2026 Cask Data, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cdap-task-worker-gateway
  namespace: default
  annotations:
    networking.gke.io/managed-by: gke-gateway-controller
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cdap-task-worker-route
  namespace: default
spec:
  parentRefs:
    - name: cdap-task-worker-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v3/worker
      backendRefs:
        - name: cdap-sidhdirenge-rbac-may25-task-worker
          port: 11020
