cdap-kubernetes/src/main/resources/task-worker-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdap-task-worker-ingress
  namespace: default
spec:
  ingressClassName: "gce-internal"
  rules:
    - http:
        paths:
          - path: /v3/worker
            pathType: Prefix
            backend:
              service:
                name: cdap-sidhdirenge-rbac-may25-task-worker
                port:
                  number: 11020
